baml_language/crates/baml_tests/snapshots/compiles/json_parse_stringify_intrinsics/baml_tests__compiles__json_parse_stringify_intrinsics__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.match_parsed(s: string) -> string  [expr] {
  { let j: baml.json.json = baml.json.parse(s) } match (j) { arr: baml.json.json[] => baml.json.stringify(arr), m: map<string, baml.json.json> => baml.json.stringify(m), n: int => "int", f: float => "float", b: bool => "bool", st: string => st, null => "null" }
}
function user.parse_and_roundtrip(s: string) -> string  [expr] {
  { let j: baml.json.json = baml.json.parse(s) } baml.json.stringify(j)
}
function user.parse_and_roundtrip_pretty(s: string) -> string  [expr] {
  { let j: baml.json.json = baml.json.parse(s) } baml.json.stringify_pretty(j)
}
