baml_language/crates/baml_tests/snapshots/compiles/json_parse_stringify_intrinsics/baml_tests__compiles__json_parse_stringify_intrinsics__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.match_parsed(s: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // s // param
    let _2: baml.json.json // j
    let _3: bool
    let _4: baml.json.json[] // arr
    let _5: baml.json.json[]
    let _6: bool
    let _7: map<string, baml.json.json> // m
    let _8: map<string, baml.json.json>
    let _9: bool
    let _10: bool
    let _11: bool
    let _12: bool
    let _13: string // st
    let _14: bool

    bb0: {
        _2 = call const fn baml.json.parse(copy _1) -> [bb1];
    }

    bb1: {
        _3 = is_type(copy _2, baml.json.json[]);
        branch copy _3 -> [bb14, bb2];
    }

    bb2: {
        _6 = is_type(copy _2, map<string, baml.json.json>);
        branch copy _6 -> [bb13, bb3];
    }

    bb3: {
        _9 = is_type(copy _2, int);
        branch copy _9 -> [bb12, bb4];
    }

    bb4: {
        _10 = is_type(copy _2, float);
        branch copy _10 -> [bb11, bb5];
    }

    bb5: {
        _11 = is_type(copy _2, bool);
        branch copy _11 -> [bb10, bb6];
    }

    bb6: {
        _12 = is_type(copy _2, string);
        branch copy _12 -> [bb9, bb7];
    }

    bb7: {
        _14 = copy _2 == const null;
        branch copy _14 -> [bb8, bb15];
    }

    bb8: {
        _0 = const "null";
        goto -> bb15;
    }

    bb9: {
        _13 = copy _2;
        _0 = copy _13;
        goto -> bb15;
    }

    bb10: {
        _0 = const "bool";
        goto -> bb15;
    }

    bb11: {
        _0 = const "float";
        goto -> bb15;
    }

    bb12: {
        _0 = const "int";
        goto -> bb15;
    }

    bb13: {
        _7 = copy _2;
        _8 = copy _7;
        _0 = call const fn baml.json.stringify(copy _8) -> [bb15];
    }

    bb14: {
        _4 = copy _2;
        _5 = copy _4;
        _0 = call const fn baml.json.stringify(copy _5) -> [bb15];
    }

    bb15: {
        return;
    }
}

fn user.parse_and_roundtrip(s: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // s // param
    let _2: baml.json.json // j
    let _3: baml.json.json

    bb0: {
        _2 = call const fn baml.json.parse(copy _1) -> [bb1];
    }

    bb1: {
        _3 = copy _2;
        _0 = call const fn baml.json.stringify(copy _3) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.parse_and_roundtrip_pretty(s: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // s // param
    let _2: baml.json.json // j
    let _3: baml.json.json

    bb0: {
        _2 = call const fn baml.json.parse(copy _1) -> [bb1];
    }

    bb1: {
        _3 = copy _2;
        _0 = call const fn baml.json.stringify_pretty(copy _3) -> [bb2];
    }

    bb2: {
        return;
    }
}
