baml_language/crates/baml_tests/snapshots/compiles/json_parse_stringify_intrinsics/baml_tests__compiles__json_parse_stringify_intrinsics__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.parse_and_roundtrip(s: string) -> string throws never {
  { : string
    let j: baml.json.json = baml.json.parse(s) : baml.json.json
    baml.json.stringify(j) : string
  }
}
function user.parse_and_roundtrip_pretty(s: string) -> string throws never {
  { : string
    let j: baml.json.json = baml.json.parse(s) : baml.json.json
    baml.json.stringify_pretty(j) : string
  }
}
function user.match_parsed(s: string) -> string throws never {
  { : string | "int" | "float" | "bool" | "null"
    let j: baml.json.json = baml.json.parse(s) : baml.json.json
    match (j : baml.json.json) : string | "int" | "float" | "bool" | "null"
      arr: baml.json.json[] =>
        baml.json.stringify(arr) : string
      m: map<string, baml.json.json> =>
        baml.json.stringify(m) : string
      n: int =>
        "int" : "int"
      f: float =>
        "float" : "float"
      b: bool =>
        "bool" : "bool"
      st: string =>
        st : string
      null =>
        "null" : "null"
  }
}
